# ros2_opencv_cpp

./: .gitignore  CMakeLists.txt  README.md  multisense.sh  package.xml  people_distance_detection.py
camera_publisher/: package.xml  setup.py
camera_publisher/camera_publisher/: camera_node.py  webcam_node.py
multisense_lib/LibMultiSense/source/LibMultiSense/include/MultiSense/details/wire/: CamSetResolutionMessage.hh
people_detection/: CMakeLists.txt  package.xml
people_detection/include/people_detection/: YoloPose.h  main.h
people_detection/src/: ImageTools.cpp  YoloPose.cpp  people_detection_node.cpp  yolo_pose.cpp
people_detection/tools/: ImageTools.h
people_detection/yolo/: YoloDet.h  YoloPose.cpp
scripts/: py_node.py
src/: cpp_publisher.cpp
tools/: ImageTools.cpp
yolo/: YoloDet.cpp
yolov8/: CMakeLists.txt  package.xml
yolov8-detection-subscriber/: CMakeLists.txt  package.xml
yolov8-detection-subscriber/launch/: detection.launch.py
yolov8-detection-subscriber/libs/tensorrt-cpp-api/: CMakeLists.txt
yolov8-detection-subscriber/src/: detection_subscriber.cpp  yolov8.cpp  yolov8.h
yolov8/launch/: yolov8.launch.py
yolov8/libs/tensorrt-cpp-api/: CMakeLists.txt
yolov8/scripts/: README.md  install_opencv.sh
yolov8/src/: ros_segmentation.cpp  yolov8.cpp  yolov8.h
